Percent gauge chart (#1981)
* Add percent gauge chart component

* Implement gradient

* Implement text scaling

* Fix order of operations

* Add targetLabel input

* Better error handling

* Log warning instead of error

--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts",
-  "version": "21.0.0-beta.0",
+  "version": "21.1.0-beta.4",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     "d3-shape": "^3.2.0",
     "d3-time-format": "^4.1.0",
     "d3-transition": "^3.0.1",
+    "gradient-path": "^2.3.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
