--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "package": "run-s build:lib:prod copy-files",
     "prepublish:lib": "npm run package",
     "publish:lib": "npm publish ./dist/swimlane/ngx-charts",
+    "publish:lib:beta": "npm publish ./dist/swimlane/ngx-charts --tag beta",
     "prepack": "npm run package",
     "pack": "npm pack ./dist/swimlane/ngx-charts",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,html,scss,css,md,json}\"",
@@ -57,6 +58,7 @@
     "d3-time-format": "^4.1.0",
     "d3-transition": "^3.0.1",
     "emoji-flags": "^1.2.0",
+    "gradient-path": "^2.3.0",
     "moment-timezone": "^0.5.40",
     "ng-in-viewport": "^6.1.5",
     "ngx-moment": "^5.0.0",
