--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -30,13 +30,13 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/animations": "17.x || 18.x",
-    "@angular/cdk": "17.x || 18.x",
-    "@angular/core": "17.x || 18.x",
-    "@angular/common": "17.x || 18.x",
-    "@angular/forms": "17.x || 18.x",
-    "@angular/platform-browser": "17.x || 18.x",
-    "@angular/platform-browser-dynamic": "17.x || 18.x",
+    "@angular/animations": ">=17.0.0",
+    "@angular/cdk": ">=17.0.0",
+    "@angular/core": ">=17.0.0",
+    "@angular/common": ">=17.0.0",
+    "@angular/forms": ">=17.0.0",
+    "@angular/platform-browser": ">=17.0.0",
+    "@angular/platform-browser-dynamic": ">=17.0.0",
     "rxjs": "7.x"
   },
   "dependencies": {
