--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts",
-  "version": "21.1.3",
+  "version": "22.0.0-alpha.0",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
     "type": "git",
@@ -30,13 +30,13 @@
   },
   "homepage": "https://github.com/swimlane/ngx-charts#readme",
   "peerDependencies": {
-    "@angular/animations": "17.x || 18.x",
-    "@angular/cdk": "17.x || 18.x",
-    "@angular/core": "17.x || 18.x",
-    "@angular/common": "17.x || 18.x",
-    "@angular/forms": "17.x || 18.x",
-    "@angular/platform-browser": "17.x || 18.x",
-    "@angular/platform-browser-dynamic": "17.x || 18.x",
+    "@angular/animations": "17.x || 18.x || 19.x",
+    "@angular/cdk": "17.x || 18.x || 19.x",
+    "@angular/core": "17.x || 18.x || 19.x",
+    "@angular/common": "17.x || 18.x || 19.x",
+    "@angular/forms": "17.x || 18.x || 19.x",
+    "@angular/platform-browser": "17.x || 18.x || 19.x",
+    "@angular/platform-browser-dynamic": "17.x || 18.x || 19.x",
     "rxjs": "7.x"
   },
   "dependencies": {
