--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,19 @@
 {
   "root": true,
-  "extends": ["@swimlane", "prettier"],
+  "extends": [
+    "@swimlane",
+    "prettier"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": ["./tsconfig.json"]
+        "project": [
+          "./tsconfig.json"
+        ]
       },
       "extends": [
         "@swimlane/eslint-config/typescript",
@@ -26,7 +33,8 @@
         "@angular-eslint/use-lifecycle-interface": "off",
         "@angular-eslint/no-output-on-prefix": "off",
         "@typescript-eslint/consistent-type-imports": "off",
-        "@typescript-eslint/no-duplicate-enum-values": "off"
+        "@typescript-eslint/no-duplicate-enum-values": "off",
+        "@angular-eslint/prefer-standalone": "off"
       }
     }
   ]
