--- a/projects/swimlane/ngx-charts/package.json
+++ b/projects/swimlane/ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-charts",
-  "version": "22.0.0-alpha.1",
+  "version": "22.0.0",
   "description": "Declarative Charting Framework for Angular",
   "repository": {
     "type": "git",
