upgraded angular-eslint packages but disabled the prefer-inject linting rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,12 @@
 {
   "root": true,
-  "extends": [
-    "@swimlane",
-    "prettier"
-  ],
+  "extends": ["@swimlane", "prettier"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": [
-          "./tsconfig.json"
-        ]
+        "project": ["./tsconfig.json"]
       },
       "extends": [
         "@swimlane/eslint-config/typescript",
@@ -34,7 +27,8 @@
         "@angular-eslint/no-output-on-prefix": "off",
         "@typescript-eslint/consistent-type-imports": "off",
         "@typescript-eslint/no-duplicate-enum-values": "off",
-        "@angular-eslint/prefer-standalone": "off"
+        "@angular-eslint/prefer-standalone": "off",
+        "@angular-eslint/prefer-inject": "off"
       }
     }
   ]
