--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@angular/platform-browser": "~20.0.4",
     "@angular/platform-browser-dynamic": "~20.0.4",
     "@angular/router": "~20.0.4",
-    "@swimlane/ngx-ui": "50.0.0-alpha.0",
+    "@swimlane/ngx-ui": "50.0.3",
     "ajv": "8.12.0",
     "codemirror": "^5.65.0",
     "d3-array": "^3.2.0",
